force-app/main/default/objects/Budget_item__c/Budget_item__c.object-meta.xml
<CustomObject>
    <description>Representa cada artículo (producto o servicio) asociado a un presupuesto de asado.</description>
    <label>Partida presupuestaria</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partidas presupuestarias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>