force-app/main/default/objects/Budget_item__c/fields/Barbecue_Budget__c.field-meta.xml
<CustomField>
    <fullName>Barbecue_Budget__c</fullName>
    <description>Relación Master-Detail entre Partida Presupuestaria y Presupuesto Asado.</description>
    <inlineHelpText>Seleccione el presupuesto al que pertenece esta partida.</inlineHelpText>
    <label>Presupuesto Asado</label>
    <referenceTo>Barbecue_Budget__c</referenceTo>
    <relationshipLabel>Partidas presupuestarias</relationshipLabel>
    <relationshipName>Partidas_presupuestarias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>