force-app/main/default/objects/Budget_item__c/fields/Item_value__c.field-meta.xml
<CustomField>
    <fullName>Item_value__c</fullName>
    <description>El valor unitario de un artículo específico dentro de una partida presupuestaria.</description>
    <inlineHelpText>Se utiliza para especificar el valor del artículo dentro de la partida presupuestaria, que puede ser un producto o servicio relacionado con un presupuesto para asados.</inlineHelpText>
    <label>Valor del Articulo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>