force-app/main/default/objects/Budget_item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de relación con el objeto producto2.</description>
    <inlineHelpText>Selecciona el producto asociado a la partida presupuestaria.</inlineHelpText>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partidas presupuestarias</relationshipLabel>
    <relationshipName>Partidas_presupuestarias</relationshipName>
    <type>Lookup</type>
</CustomField>