force-app/main/default/objects/Budget_item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Cantidad de artículos en la partida presupuestaria para asados.</description>
    <inlineHelpText>Especifica la cantidad de productos o artículos incluidos en la partida presupuestaria para asados. Ingrese solo números enteros.</inlineHelpText>
    <label>Cantidad</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>