force-app/main/default/objects/Budget_item__c/fields/Record_Type_Product__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Product__c</fullName>
    <formula>Product__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro producto</label>
    <type>Text</type>
</CustomField>