force-app/main/default/objects/Budget_item__c/validationRules/Validar_activo_producto_servicicio.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_activo_producto_servicicio</fullName>
    <active>true</active>
    <description>Evita que se seleccione un producto que no esté activo como partida presupuestaria.</description>
    <errorConditionFormula>NOT(Product__r.IsActive)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>El producto o servicio seleccionado no está activo y no puede ser utilizado como partida presupuestaria. Por favor selecciona uno activo.</errorMessage>
</ValidationRule>