force-app/main/default/objects/Budget_item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Barbecue_Budget__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Item_value__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>